test/scc/expr/semantic-errors/110.t
struct A { int x; };

void foo(struct A a)
{
}

void test()
{
    foo(10);
}